--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.10",
+    "cordova-plugin-ionic": "^4.1.7",
     "firebase": "^5.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -39,5 +40,14 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-ionic": {
+        "APP_ID": "c1921dc6",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "background"
+      }
+    }
+  }
 }
